hphp/test/slow/modules/module_level_traits/module_level_traits_6.php.expectf
Fatal error: Uncaught exception 'ModuleBoundaryViolationException' with message 'Accessing internal function foo in module MLT_B from the default module is not allowed' in %s/module_level_traits_6.inc0:7
Stack trace:
%A
